--- a/ccalajuela_web_frontend/src/pages/Contact/Contact.css
+++ b/ccalajuela_web_frontend/src/pages/Contact/Contact.css
@@ -1,18 +1,29 @@
 /* Contact.css */
-.contact-page-container {
+  .contact-page-container {
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 20px;
-    padding: 20px;
+    margin-top: 0;
+    padding-top: 0;
   }
+
+  .contact-content {
+    width: 100%;
+    display: flex;
+    flex-direction: column-reverse;
+    align-items: center;
+  }
+  
+
   
   .contact-form-box {
     background-color: #ffffff;
-    padding: 20px;
+    padding: 50px;
     border-radius: 20px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    margin-bottom: 20px;
+    margin-bottom: 10px;
+    margin-top: 10px;
     width: 100%;
     max-width: 450px;
   }
@@ -101,11 +112,53 @@
     height: 300px;
     border: none;
   }
+
+  .text-area-form{
+
+    width: 300px;
+    height: 100px;
+    resize: none;
+  }
+
+  .numbers-on-contact{
+    font-size: 14px;
+    font-weight: bold;
+  }
+
+  .contact-banner {
+    margin: 0;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('../Banners/Banner\ 2.jpg');
+    background-size: cover;
+    background-position: center;
+    color: white;
+    text-align: center;
+    padding: 100px 0 ;
+    width: 100%;
+    height: 250px;
+  }
   
+  .contact-banner h1 {
+    font-size: 3em; /* Tamaño del título */
+    margin: 0;
+    padding: 0;
+  }
+  
+  .p-title-banner{
+    font-size: 20px;
+    font-weight: 300;
+  }
+
+  .h1-title-banner{
+    font-size: 48px;
+    font-weight: 600;
+
+  }
+
   @media (min-width: 768px) {
-    .contact-page-container {
-      flex-direction: row-reverse; /* Cambia el orden de los elementos */
-      justify-content: center;
+  
+    .contact-content {
+      flex-direction: row;
+      justify-content: space-between;
       align-items: flex-start;
     }
   
